<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue Push</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="sound">Sound</string>
    <string name="shake">Shake</string>
    <string name="popup">Popup</string>
    <string name="action_restart">Restart Service</string>
    <string name="action_stop">Stop Service</string>
    <string name="autostart">Auto Start</string>
    <string name="action_logoff">Log Off</string>
    <string name="action_delList">Clear List</string>
	<string name="remember_username">Remember User</string>
	<string name="auto_login">Auto Login</string>
</resources>
