<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdc.bp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
        <item
        android:id="@+id/action_delList"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_delList"/>
        <item
        android:id="@+id/action_logoff"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_logoff"/>
        <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_stop"/>
		 <item
        android:id="@+id/action_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_restart"/>

</menu>
