<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

            <ImageView
                android:id="@+id/faceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="BluePush"
                android:background="@drawable/ic_launcher" />
            <TextView
   			    android:id="@+id/TextView01"
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:layout_alignTop="@+id/login_edit_account"
   			    android:layout_toLeftOf="@+id/login_edit_account"
   			    android:gravity="center_vertical"
   			    android:paddingLeft="7.0sp"
   			    android:text="@string/username_label"
   			    android:textColor="#ff3f3f3f"
   			    android:textSize="16.0dip" />

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@+id/remember_user"
                android:inputType="text"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />
            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/password_label"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />
            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />
			<Button
                android:id="@+id/btn_login"
                android:layout_width="230.0px"
                android:layout_height="100.0px"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView02"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="7.0px"
                android:text="@string/button_login" />

   			<CheckBox
   			    android:id="@+id/remember_user"
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:layout_alignLeft="@+id/auto_login"
   			    android:layout_below="@+id/login_edit_pwd"
   			    android:text="@string/remember_username"
   			    android:textColor="#ff3f3f3f" />

   			<CheckBox
   			    android:id="@+id/auto_login"
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:layout_alignParentLeft="true"
   			    android:layout_below="@+id/remember_user"
   			    android:layout_marginLeft="16dp"
   			    android:text="@string/auto_login"
   			    android:textColor="#ff3f3f3f" />

        </RelativeLayout>
               
    </LinearLayout>

</LinearLayout>